--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -5,3 +5,6 @@ $base-green: #219653;
 $primary-color: #219653;
 $light-bg: #ffffff;
 $dark-bg: #222222;
+
+$primary-font: 'Poppins', sans-serif;
+$secondary-font: 'Roboto', sans-serif;
