chore(themeToggler): toggle the application theme create toggle button component added styles and animation create app_theme action create reducer write unit tests [#167649118]

--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,3 +1,7 @@
 $color-sassy: #cc4397;
 $color-blue: #0059ff;
 $base-green: #219653;
+
+$primary-color: #219653;
+$light-bg: #ffffff;
+$dark-bg: #222222;
