--- a/src/styles/partials/base.scss
+++ b/src/styles/partials/base.scss
@@ -2,3 +2,12 @@
   background-color: pink;
   width: 100px;
 }
+
+body {
+  background-color: #222222;
+  transition: background-color 0.6s ease;
+  &.light-theme {
+    background-color: $light-bg;
+    transition: background-color 0.6s ease;
+  }
+}
