--- a/src/styles/partials/custom.scss
+++ b/src/styles/partials/custom.scss
@@ -12,3 +12,17 @@
   background-color: red;
   margin-left: 15px;
 }
+
+.input {
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.form-input-light-theme {
+  background: #ffffff;
+  box-shadow: 0px 0px 33px rgba(0, 0, 0, 0.07);
+}
+
+.form-input-dark-theme {
+  border: 1px solid #ffffff;
+}
