--- a/src/styles/partials/base.scss
+++ b/src/styles/partials/base.scss
@@ -12,8 +12,10 @@ h5 {
 body {
   background-color: #222222;
   transition: background-color 0.6s ease;
+  color: #ffffff;
   &.light-theme {
     background-color: $light-bg;
     transition: background-color 0.6s ease;
+    color: #222222;
   }
 }
