feature(homepage): create landing page create carousel component fetch articles from database by tags added loading component connect with redux store for state management styled page for responsiveness write integration test [Finishes #167701704]

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,46 @@
 .nav-shadow {
-  background: #ffffff;
   box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.04);
 }
 
 .navbar {
-  padding: 0.8rem 1rem;
+  padding: 0.9rem 1rem;
+  &.dark-theme a {
+    color: #ffffff;
+  }
+  &.dark-theme {
+    background-color: #212121;
+    transition: background-color 0.6s ease;
+    color: #ffffff;
+  }
 }
+.navbtn_login {
+  padding-top: 6px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  &:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color: #219653;
+  }
+}
+
+.navbtn_signup {
+  padding-top: 6px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  &:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color: #ffffff;
+  }
+}
+
+.button-inverse {
+  background: none;
+  border: thin solid #219653;
+  color: #219653;
+}
+
 .navbar-logo a {
   text-decoration: none;
   font-family: 'Poppins', sans-serif;
@@ -15,6 +50,6 @@
     cursor: pointer;
   }
 }
-button {
-  line-height: 22px;
+.display-flex {
+  display: flex;
 }
