--- a/src/components/ArticleCard/ArticleCard.scss
+++ b/src/components/ArticleCard/ArticleCard.scss
@@ -1,9 +1,24 @@
 @import '../../styles/partials/variables.scss';
 
+.card {
+  &.dark-theme {
+    background-color: #222222 !important;
+    background-clip: border-box;
+    border: none !important;
+  }
+  &.light-theme {
+    border: none !important;
+  }
+}
+
+.card-title {
+  min-height: 38px;
+}
 .articleCard {
   width: 322px;
   border-radius: 10px;
-  box-shadow: 0px 0px 26px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.25);
+  margin: 10px 15px;
 
   .card-img-top {
     max-width: 100%;
@@ -33,6 +48,8 @@
     margin: 0px 5px;
     border-radius: 50%;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.42);
+    position: relative;
+    bottom: 6px;
   }
 
   .flex {
