--- a/src/components/Carousel/style.scss
+++ b/src/components/Carousel/style.scss
@@ -8,6 +8,7 @@
   margin: 0 auto;
   .customFeel {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: space-evenly;
     max-width: 95%;
     margin: 0 auto;
