--- a/src/styles/partials/base.scss
+++ b/src/styles/partials/base.scss
@@ -11,10 +11,17 @@ h5 {
 }
 
 body {
-  background-color: #222222;
+  background-color: #212121;
   transition: background-color 0.6s ease;
+  color: #ffffff;
   &.light-theme {
     background-color: $light-bg;
     transition: background-color 0.6s ease;
+    color: #222222;
+  }
+  &.dark-theme {
+    background-color: #212121;
+    transition: background-color 0.6s ease;
+    color: #ffffff;
   }
 }
